exports[`create token by typing non empty string and clicking suggestion`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing comma`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing enter`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing enter for highlighted suggestion`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`create token by typing non empty string and pressing tab`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        insert another
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`delete token by backspacing when input is empty`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        delete me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`delete token by clicking delete button`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        delete me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`edit token by clicking on tag and typing`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag"
      onClick={[Function]}>
      <span>
        edit me
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`hide suggestions list by typing non empty string and pressing escape`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`highlight next suggestion by typing non empty string and pressing down`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`highlight previous suggestion by typing non empty string and pressing up`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`show input placeholder by rendering`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        Add Tag
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Add Tag"
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`show suggestions list by typing non empty string`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;
